@@ -4,5 +4,5 @@
 ; Double quotes in the values have to be encoded as "_QQ_"
 
 PLG_CONTENT_YETANOTHERSOCIAL="Content - Yet Another Social Plugin"
-PLG_CONTENT_YETANOTHERSOCIAL_ERROR_J17="Yet Another Social Plugin requires Joomla! 1.7 or newer"
+PLG_CONTENT_YETANOTHERSOCIAL_ERROR_VERSION="Yet Another Social Plugin requires Joomla! 2.5 or newer"
 PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display an assortment of social networking buttons."
