@@ -1,3 +1,6 @@
+13-January-2012 Michael Babker
+! Minimum supported version is Joomla! 2.5
+
 14-November-2011 Michael Babker
 - Remove Google Buzz button due to API shutdown
 
